--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docgen": "vue-docgen -c docgen.config.js -w",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -18,9 +21,16 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "markdown-it-include": "^2.0.0",
     "vue-docgen-cli": "^4.40.0",
+    "vue-live": "^1.16.1",
     "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "vuepress-bar": "^0.4.2",
+    "vuepress-plugin-auto-sidebar": "^2.3.0",
+    "vuepress-plugin-component-docgen": "^0.1.0",
+    "vuepress-plugin-docgen": "^1.2.9",
+    "vuepress-plugin-live": "^1.6.2"
   },
   "eslintConfig": {
     "root": true,
